Add title bar edits

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <title>Pizza Planet Kenya | Flavouring Your World </title>
+    <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
 </head>
 <body>
+  <h1>Pizza Planet Kenya</h1>
 </body>
 <html>
