Add top nav bar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
   <meta charset="utf-8">
   <title>Pizza Planet Kenya | Flavouring Your World </title>
-    <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="pizza icon" href="images/pizza icon.jpg" type="image/png">
 </head>
+<header>
+  <img src="images/Product.png" id="nav image"    width="180px" height="180px" alt="">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Home</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Menu <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Order</a>
+        <a class="nav-item nav-link" href="#">Check Out</a>
+      </div>
+    </div>
+  </nav>
+</header>
 <body>
-  <h1>Pizza Planet Kenya</h1>
+<h2>Pizza Menu</h2>
 </body>
 <html>
