Add custom pizza menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </div>
     <div class="Menu page">
-      <h2></h2>
+      <img src="images/menu.jpg" id =headerimage>
     </div>
     <div class="Order Page">
     </div>
