Add top Nav bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
 </head>
 <body>
+  <div class="topnav">
+  <a class="active" href="#Home">Home</a>
+  <a href="#Menu">Menu</a>
+  <a href="#Checkout">Checkout</a>
+</div>
   <div class=nav container id="NAV">
     <img src="images/Product.png" id =headerimage>
   </div>
