Add top nav image

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta charset="utf-8">
   <title>Pizza Planet Kenya | Flavouring Your World </title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
 </head>
 <body>
-  <div class="topnav" >
-  <a class="active" href="#Home">Home</a>
-  <a href="#Menu">Menu</a>
-  <a href="#Checkout">Checkout</a>
-</div>
-    <img src="images/Product.png" id =headerimage>
-  <div class="container">
-    <div class="Home Page">
-
+  <div class="Homepage" id="HomeID">
+    <div class="topnav" >
+    <a class="active" href="#Home">Home</a>
+    <a href="#Menu">Menu</a>
+    <a href="#Checkout">Checkout</a>
+  </div>
+      <img src="images/output.png" id =headerimage>
+      <div class="Home Page">
+      </div>
     </div>
-    <div class="Menu page">
-      <img src="images/menu.jpg" id =headerimage>
-    </div>
-    <div class="Order Page">
-    </div>
-</div>
+      <div class="Menu page">
+        <img src="images/menu.jpg" id =headerimage>
+      </div>
+      <div class="Order Page">
+      </div>
 </body>
 <html>
