Add page 2 bg image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="Home Page">
       </div>
     </div>
-      <div class="Menu page">
+      <div class="Menu page" id=MenuID>
         <img src="images/menu.jpg" id =headerimage>
       </div>
       <div class="Order Page">
