Add changes to image properties

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
       <div class="Menu page" id=MenuID>
-        <img src="images/menu.jpg" id =headerimage>
+        <img src="images/menu.jpg" id =menuimage>
       </div>
       <div class="Order Page">
       </div>
