--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pizza Planet Kenya | Flavouring Your World </title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
 </head>
 <body>
@@ -14,10 +18,58 @@
     <a href="#Menu">Menu</a>
     <a href="#Checkout">Checkout</a>
   </div>
-      <img src="images/output.png" id =headerimage>
+      <img src="images/output.png" id ="headerimage">
       <div class="Home Page">
       </div>
+      <div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="images/backgroundp1.jpg" alt="first page" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/cheese.jpg" alt="cheese" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/bbqchicken.webp" alt="bbqchicken" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/margherita.jpg" alt="margherita" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/pepperoni.jpg" alt="pepperoni" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/veggie.jpg" alt="veggie" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="images/hawaaian.webp" alt="hawaaian" width="460" height="345">
+      </div>
     </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+    </div>
+
       <div class="Menu page" id=MenuID>
         <img src="images/menu.jpg" id =menuimage>
       </div>
