Add initial form structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="topnav" >
     <a class="active" href="#Home">Home</a>
     <a href="#Menu">Menu</a>
-    <a href="#Checkout">Checkout</a>
+    <a href="#Cart">Make Order</a>
   </div>
       <img src="images/output.png" id ="headerimage">
       <div class="Home Page">
@@ -66,14 +66,34 @@
     </a>
   </div>
 </div>
-
-
     </div>
-
       <div class="Menu page" id=MenuID>
         <img src="images/menu.jpg" id =menuimage>
       </div>
       <div class="Order Page">
       </div>
+
+
+
+    <form>
+      <h1>MAKE AN ORDER</h1>
+      <div class="form">
+        <form id="myForm">
+        <h1>CONTACT US</h1>
+        <div class="row">
+         <div class="col-5">
+         <div class="form-group">
+         <label for="name"></label>
+         <input type="text" name="name" class="required form-control" placeholder="NAME" id="name" value=""  >
+           </div>
+          </div>
+          <div class="col-5">
+         <div class="form-group">
+         <label for="email"></label>
+         <input type="email" name="" class="required email form-control" id="EMAIL" placeholder="EMAIL">
+         </div>
+          </div>
+    </form>
+
 </body>
 <html>
