--- a/index.html
+++ b/index.html
@@ -10,90 +10,155 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
-</head>
-<body>
-  <div class="Homepage" id="HomeID">
-    <div class="topnav" >
-    <a class="active" href="#Home">Home</a>
-    <a href="#Menu">Menu</a>
-    <a href="#Cart">Make Order</a>
-  </div>
-      <img src="images/output.png" id ="headerimage">
-      <div class="Home Page">
+    </head>
+    <body>
+      <div class="Homepage" id="HomeID">
+        <div class="topnav" >
+        <a class="active" href="#Home">Home</a>
+        <a href="#Menu">Menu</a>
+        <a href="#Cart">Make Order</a>
       </div>
-      <div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="images/backgroundp1.jpg" alt="first page" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/cheese.jpg" alt="cheese" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/bbqchicken.webp" alt="bbqchicken" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/margherita.jpg" alt="margherita" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/pepperoni.jpg" alt="pepperoni" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/veggie.jpg" alt="veggie" width="460" height="345">
-      </div>
-      <div class="item">
-        <img src="images/hawaaian.webp" alt="hawaaian" width="460" height="345">
+          <img src="images/output.png" id ="headerimage">
+          <div class="Home Page">
+          </div>
+          <div class="container">
+      <br>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="images/backgroundp1.jpg" alt="first page" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/cheese.jpg" alt="cheese" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/bbqchicken.webp" alt="bbqchicken" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/margherita.jpg" alt="margherita" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/pepperoni.jpg" alt="pepperoni" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/veggie.jpg" alt="veggie" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="images/hawaaian.webp" alt="hawaaian" width="460" height="345">
+          </div>
+        </div>
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-    </div>
-      <div class="Menu page" id=MenuID>
-        <img src="images/menu.jpg" id =menuimage>
-      </div>
-      <div class="Order Page">
-      </div>
-
-
-
-    <form>
-      <h1>MAKE AN ORDER</h1>
-      <div class="form">
-        <form id="myForm">
-        <h1>CONTACT US</h1>
-        <div class="row">
-         <div class="col-5">
-         <div class="form-group">
-         <label for="name"></label>
-         <input type="text" name="name" class="required form-control" placeholder="NAME" id="name" value=""  >
-           </div>
+        </div>
+          <div class="Menu page" id=MenuID>
+            <img src="images/menu.jpg" id =menuimage>
           </div>
-          <div class="col-5">
-         <div class="form-group">
-         <label for="email"></label>
-         <input type="email" name="" class="required email form-control" id="EMAIL" placeholder="EMAIL">
-         </div>
-          </div>
-    </form>
 
-</body>
-<html>
+
+
+
+          <div class="container">
+          <form>
+            <h1>CHECK OUT CART</h1>
+         <div class="row">
+            <div class="col-md-4">
+              <label for="Name" class="form-label">Name</label>
+              <input type="Name" class="form-control" id="Name" aria-describedby="emailHelp">
+            </div>
+            <div class="col-md-4">
+              <label for="Location" class="form-label">Location</label>
+              <input type="Location" class="form-control" id="Location">
+            </div>
+             </div>
+
+            <div class="col-md-4">
+              <div class="mb-3">
+                <label for="disabledSelect" class="form-label">Pizza type</label>
+                <select id="disabledSelect" class="form-select">
+                  <option>Hawaaian</option>
+                  <option>BBQchicken</option>
+                  <option>Veggie</option>
+                  <option>Margherita</option>
+                  <option>Veggie</option>
+                  <option>Pepperoni</option>
+                      </select>
+                    </div>
+                  </div>
+            <div class="col-md-4">
+              <div class="mb-3">
+                <label for="disabledSelect" class="form-label">Size</label>
+                <select id="disabledSelect" class="form-select">
+                  <option>Small-KES:450</option>
+                  <option>Medium-KES:650</option>
+                  <option>Large-KES.850</option>
+                      </select>
+                    </div>
+                  </div>
+              <div class="col-md-4">
+                <div class="mb-3">
+                  <label for="disabledSelect" class="form-label">Crust size</label>
+                  <select id="disabledSelect" class="form-select">
+                    <option>Thick:ADD.200</option>
+                    <option>Thin:normal price</option>
+                        </select>
+                      </div>
+                    </div>
+              <div class="col-md-4">
+                  <div class="mb-3">
+                    <label for="disabledSelect" class="form-label">Pizza Extras</label>
+                    <select id="disabledSelect" class="form-select">
+                      <option>Extra Bacon:Add KES 150</option>
+                      <option>Extra Green Pepper:Add KES100</option>
+                      <option>Extra Cheese:Add KES150</option>
+                          </select>
+                        </div>
+                      </div>
+              <div class="col-md-4">
+                <div class="mb-3">
+                  <label for="disabledSelect" class="form-label">Drinks</label>
+                  <select id="disabledSelect" class="form-select">
+                    <option>Minute Maid-KES.150</option>
+                    <option>Soda 350 ml-KES.80</option>
+                    <option>Dasani Water-KES:100</option>
+                    <option>Soda 500 ml-KES.120</option>
+                    <option>Soda 2 litre-KES.250</option>
+                        </select>
+                      </div>
+                    </div>
+                <div class="col-md-4">
+                  <label for="Location" class="form-label">Location</label>
+                  <input type="Location" class="form-control" id="Location">
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </form>
+
+        </div>
+      </body>
+  <html>
