--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
     </head>
     <body>
@@ -143,20 +144,10 @@
                       </div>
                     </div>
                 <div class="col-md-4">
-                  <label for="Location" class="form-label">Location</label>
-                  <input type="Location" class="form-control" id="Location">
+                  <label for="Total" class="Total">Total</label>
+                  <input type="Total" class="form-control" id="Total">
                 </div>
-
-
-
-
-
-
-
-
-
-
-
+          <div class="submit"><input type="submit" value="Submit"></div>
             </form>
 
         </div>
