--- a/index.html
+++ b/index.html
@@ -71,11 +71,8 @@
           <div class="Menu page" id=MenuID>
             <img src="images/menu.jpg" id =menuimage>
           </div>
-
-
-
-
           <div class="container">
+            <div class="card">
           <form>
             <h1>CHECK OUT CART</h1>
          <div class="row">
@@ -147,9 +144,5 @@
                   <label for="Total" class="Total">Total</label>
                   <input type="Total" class="form-control" id="Total">
                 </div>
-          <div class="submit"><input type="submit" value="Submit"></div>
-            </form>
-
-        </div>
-      </body>
-  <html>
+                  <div class="Order Now!"><input type="submit" value="onsubmit"></div>
+              </div>
