Add body backgroung colour

--- a/images/Pizza Planet Kenya _ Flavouring Your World.html
+++ b/images/Pizza Planet Kenya _ Flavouring Your World.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta charset="utf-8">
+<!-- saved from url=(0106)file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pizza Planet Kenya | Flavouring Your World </title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
+  <link href="./Pizza Planet Kenya _ Flavouring Your World_files/style.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./Pizza Planet Kenya _ Flavouring Your World_files/bootstrap.min.css">
+  <script src="./Pizza Planet Kenya _ Flavouring Your World_files/jquery.min.js"></script>
+  <script src="./Pizza Planet Kenya _ Flavouring Your World_files/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./Pizza Planet Kenya _ Flavouring Your World_files/bootstrap.min(1).css">
+    <link rel="delano icon" href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/images/pizza%20icon.jpg" type="image/png">
     </head>
     <body>
       <div class="Homepage" id="HomeID">
-        <div class="topnav" >
-        <a class="active" href="#Home">Home</a>
-        <a href="#Menu">Menu</a>
-        <a href="#Cart">Make Order</a>
+        <div class="topnav">
+        <a class="active" href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html#Home">Home</a>
+        <a href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html#Menu">Menu</a>
+        <a href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html#Cart">Make Order</a>
       </div>
-          <img src="images/output.png" id ="headerimage">
+          <img src="./Pizza Planet Kenya _ Flavouring Your World_files/output.png" id="headerimage">
           <div class="Home Page">
           </div>
           <div class="container">
@@ -27,52 +27,51 @@
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
+          <li data-target="#myCarousel" data-slide-to="0" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="3" class=""></li>
         </ol>
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/backgroundp1.jpg" alt="first page" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/cheese.jpg" alt="cheese" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/bbqchicken.webp" alt="bbqchicken" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/margherita.jpg" alt="margherita" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/pepperoni.jpg" alt="pepperoni" width="460" height="345">
+          </div>
+          <div class="item">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/veggie.jpg" alt="veggie" width="460" height="345">
+          </div>
           <div class="item active">
-            <img src="images/backgroundp1.jpg" alt="first page" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/cheese.jpg" alt="cheese" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/bbqchicken.webp" alt="bbqchicken" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/margherita.jpg" alt="margherita" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/pepperoni.jpg" alt="pepperoni" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/veggie.jpg" alt="veggie" width="460" height="345">
-          </div>
-          <div class="item">
-            <img src="images/hawaaian.webp" alt="hawaaian" width="460" height="345">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/hawaaian.webp" alt="hawaaian" width="460" height="345">
           </div>
         </div>
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <a class="left carousel-control" href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html#myCarousel" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <a class="right carousel-control" href="file:///home/andrew/Documents/moringa-school-projects/independent-projects/independent-project4/index.html#myCarousel" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
       </div>
     </div>
         </div>
-          <div class="Menu page" id=MenuID>
-            <img src="images/menu.jpg" id =menuimage>
+          <div class="Menu page" id="MenuID">
+            <img src="./Pizza Planet Kenya _ Flavouring Your World_files/menu.jpg" id="menuimage">
           </div>
           <div class="container">
-            <div class="forms homepage" id="forms">
             <div class="card">
           <form>
             <h1>CHECK OUT CART</h1>
@@ -141,13 +140,16 @@
                         </select>
                       </div>
                     </div>
-                <div class="Order Now!"><input type="submit" value="Order Now!"></div>
-                  </div>
+                <div class="col-md-4">
+                  <label for="Total" class="Total">Total</label>
+                  <input type="Total" class="form-control" id="Total">
                 </div>
-              </div>
-      <div class="navbar">
-        <h1>contact us<h1>
-        <a href="#home" class="active">Location</a>
-        <a href="#news">contacts us</a>
-        <a href="#contact">Contact</a>
-      </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                <label class="form-check-label" for="defaultCheck1">
+                  Delivery
+                </label>
+                </div>
+                  <div class="Order Now!"><input type="submit" value="Order Now!"></div>
+              </form></div>
+</div></body></html>
