change bottom Nav bar style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="delano icon" href="images/pizza icon.jpg" type="image/png">
+    <link rel="pizza icon" href="images/pizza icon.jpg" type="image/png">
     </head>
     <body>
       <div class="Homepage" id="HomeID">
@@ -145,9 +144,27 @@
                   </div>
                 </div>
               </div>
-      <div class="navbar">
-        <h1>contact us<h1>
-        <a href="#home" class="active">Location</a>
-        <a href="#news">contacts us</a>
-        <a href="#contact">Contact</a>
-      </div>
+
+          <div class="card" id="contact">
+              <div class="row" id="contactdetails">
+                <div class="col-md-4">
+                </div>
+                <div class="col-md-3 text=justify">
+                  <h2>Location</h2>
+                  <p>Pizza planet</p>
+                  <p>The Atrium | Westlands</p>
+                  </div>
+                <div class="col-md-3">
+                  <h2>Customer Care</h2>
+                   <p>sales@pizzaplanet.com</p>
+                   <p>Phone: 078383939393</p>
+                </div>
+
+          <div class="col-md-1"></div>
+        </div>
+        <div class="row">
+          <div class="container text-center footer">
+            <p> 2021 | Pizza Planet</p>
+          </div>
+        </div>
+    </div>
