--- a/index.html
+++ b/index.html
@@ -13,13 +13,10 @@
     </head>
     <body>
       <div class="Homepage" id="HomeID">
-        <div class="topnav" >
-        <a class="active" href="#Home">Home</a>
-        <a href="#Menu">Menu</a>
-        <a href="#Cart">Make Order</a>
-      </div>
+
           <img src="images/output.png" id ="headerimage">
           <div class="Home Page">
+             <a class="btn btn-success wiggle" class="nav-link" href="checkout.html">ORDER NOW!!!</a>
           </div>
           <div class="container">
       <br>
@@ -70,82 +67,7 @@
           <div class="Menu page" id=MenuID>
             <img src="images/menu.jpg" id =menuimage>
           </div>
-          <div class="container">
-            <div class="forms homepage" id="forms">
-            <div class="card">
-          <form>
-            <h1>CHECK OUT CART</h1>
-         <div class="row">
-            <div class="col-md-4">
-              <label for="Name" class="form-label">Name</label>
-              <input type="Name" class="form-control" id="Name" aria-describedby="emailHelp">
-            </div>
-            <div class="col-md-4">
-              <label for="Location" class="form-label">Location</label>
-              <input type="Location" class="form-control" id="Location">
-            </div>
-             </div>
-
-            <div class="col-md-4">
-              <div class="mb-3">
-                <label for="disabledSelect" class="form-label">Pizza type</label>
-                <select id="disabledSelect" class="form-select">
-                  <option>Hawaaian</option>
-                  <option>BBQchicken</option>
-                  <option>Veggie</option>
-                  <option>Margherita</option>
-                  <option>Veggie</option>
-                  <option>Pepperoni</option>
-                      </select>
-                    </div>
-                  </div>
-            <div class="col-md-4">
-              <div class="mb-3">
-                <label for="disabledSelect" class="form-label">Size</label>
-                <select id="disabledSelect" class="form-select">
-                  <option>Small-KES:450</option>
-                  <option>Medium-KES:650</option>
-                  <option>Large-KES.850</option>
-                      </select>
-                    </div>
-                  </div>
-              <div class="col-md-4">
-                <div class="mb-3">
-                  <label for="disabledSelect" class="form-label">Crust size</label>
-                  <select id="disabledSelect" class="form-select">
-                    <option>Thick:ADD.200</option>
-                    <option>Thin:normal price</option>
-                        </select>
-                      </div>
-                    </div>
-              <div class="col-md-4">
-                  <div class="mb-3">
-                    <label for="disabledSelect" class="form-label">Pizza Extras</label>
-                    <select id="disabledSelect" class="form-select">
-                      <option>Extra Bacon:Add KES 150</option>
-                      <option>Extra Green Pepper:Add KES100</option>
-                      <option>Extra Cheese:Add KES150</option>
-                          </select>
-                        </div>
-                      </div>
-              <div class="col-md-4">
-                <div class="mb-3">
-                  <label for="disabledSelect" class="form-label">Drinks</label>
-                  <select id="disabledSelect" class="form-select">
-                    <option>Minute Maid-KES.150</option>
-                    <option>Soda 350 ml-KES.80</option>
-                    <option>Dasani Water-KES:100</option>
-                    <option>Soda 500 ml-KES.120</option>
-                    <option>Soda 2 litre-KES.250</option>
-                        </select>
-                      </div>
-                    </div>
-                <div class="Order Now!"><input type="submit" value="Order Now!"></div>
-                  </div>
-                </div>
-              </div>
-
-          <div class="card" id="contact">
+              <div class="card" id="contact">
               <div class="row" id="contactdetails">
                 <div class="col-md-4">
                 </div>
