Add J query and form validation

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="pizza icon" href="images/pizza icon.jpg" type="image/png">
-  <meta charset="utf-8">
-  <title>checkout basket</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/wickedcss.min.css">
-  <link  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-</head>
+    <link rel="pizza icon" href="images/pizza icon.jpg" type="image/png">
+    <meta charset="utf-8">
+    <title>checkout basket</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/wickedcss.min.css">
+    <link  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  </head>
     <body>
       <div class="Homepage" id="HomeID">
           <img src="images/output.png" id ="headerimage">
@@ -73,10 +73,6 @@
           <div class="Menu page" id=MenuID>
             <img src="images/menu.jpg" id =menuimage>
           </div>
-
-
-
-
           <div class="card" id="contact">
           <div class="row" id="contactdetails">
             <div class="col-md-4">
@@ -99,3 +95,8 @@
           </div>
         </div>
     </div>
+    <script src="js/mdb.min.js"></script>
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/script.js"></script>
+   </body>
+   </html>
