--- a/checkout.html
+++ b/checkout.html
@@ -79,7 +79,7 @@
 </div><br>
 <p class="total">Total Price:</p>
 <div class="submit">
-  <button type="button" class="btn btn-info"  id ="wholeOrder">Submit</button>
+  <button type="button" class="btn btn-info"  id ="makeOrder">Submit</button>
  </div>
     </div>
   </div>
