--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="pizza icon" href="images/pizza icon.jpg" type="image/png">
     <meta charset="utf-8">
     <title>checkout basket</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/wickedcss.min.css">
@@ -22,7 +21,7 @@
       <div class="Homepage" id="HomeID">
           <img src="images/output.png" id ="headerimage">
           <div class="HomePage">
-             <a class="btn btn-success wiggle" class="nav-link" href="checkout.html">ORDER NOW!!!</a>
+             <a class="btn btn-success wiggle"   class="nav-link"  style="width:500px"   href="checkout.html">CLICK HERE TO ORDER</a>
           </div>
           <div class="container">
       <br>
