Link up top nav

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="topnav">
         <div class="topnav-centered">
           <div id="navbar">
-        <a class="active" href="javascript:void(0)">HOME</a>
-        <a href="javascript:void(0)">MENU</a>
-        <a href="javascript:void(0)">MAKE AN ORDER</a>
-        <a href="javascript:void(0)">CONTACT US</a>
+        <a class="active" href="index.html">HOME <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#MenuID">MENU</a>
+        <a class="nav-link" href="checkout.html">MAKE AN ORDER</a>
+        <a class="nav-link" href="#contact">CONTACT US</a>
     </div>
         </div>
       <br>
